# simple-api-demo-cc

./: .clever.json  .cursorrules  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf
docs/api/: API Documentation - Endpoints & Responses.md
docs/architecture/: Module Architecture - Core Components.md
docs/deployment/: Deployment & DevOps - Docker & Infrastructure.md
docs/development/: Development Workflow & Best Practices.md
docs/diagrams/: Simple API Demo - Architecture Overview.canvas
docs/getting-started/: Getting Started Guide.md
docs/history/: Refactoring History & Lessons Learned.md
docs/overview/: Simple API Demo - Project Overview.md
docs/testing/: Testing Strategy & Implementation.md
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs
tests/: integration_tests.rs
