[package]
name = "simple-api-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.9"
anyhow = "1.0.95"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
